Alternative to OpenSSL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,11 @@ if (UNIX AND NOT APPLE)
     set(LINUX 1)
 endif()
 if (WIN32 AND MSVC AND MSVC_VERSION)
-	if (MSVC_VERSION LESS 1800)
-		set(VS2013_OR_HIGHER 0)
-	else()
-		set(VS2013_OR_HIGHER 1)
-	endif()
+    if (MSVC_VERSION LESS 1800)
+        set(VS2013_OR_HIGHER 0)
+    else()
+        set(VS2013_OR_HIGHER 1)
+    endif()
 endif()
 
 #=============================================================================
@@ -33,15 +33,15 @@ add_definitions(-DGAMECLIENT_DEBUGLEVEL=1)
 # On VS2013+, lets not use CURL but straight Windows' IXMLHttpRequest2, 
 # unless specified otherwise
 if (NOT USE_CPPREST AND NOT VS2013_OR_HIGHER AND NOT APPLE)
-	add_definitions(-DUSE_CURL)
-	set(USE_CURL 1)
+    add_definitions(-DUSE_CURL)
+    set(USE_CURL 1)
 endif()
 
 # On VS2013+, lets not use CURL but straight Windows' IXMLHttpRequest2, 
 # unless specified otherwise
 if (NOT USE_CPPREST AND NOT VS2013_OR_HIGHER AND NOT APPLE)
-	add_definitions(-DUSE_PTHREAD)
-	set(USE_PTHREAD 1)
+    add_definitions(-DUSE_PTHREAD)
+    set(USE_PTHREAD 1)
 endif()
 
 # On non-windows platform, lets use libwebsockets
@@ -54,7 +54,7 @@ endif()
 #=============================================================================
 # We want to use C++11 flag on the compiler for std::thread
 if (NOT WIN32 OR VS2013_OR_HIGHER)
-	set(CMAKE_CXX_STANDARD 11)
+    set(CMAKE_CXX_STANDARD 11)
 endif()
 
 # Multi core compilation in VS
@@ -66,7 +66,7 @@ endif()
 # Unit Tests
 #=============================================================================
 if (DEFINED(${BUILD_TESTS}) OR ${BUILD_TESTS})
-	add_subdirectory("${CMAKE_SOURCE_DIR}/tests")
+    add_subdirectory("${CMAKE_SOURCE_DIR}/tests")
 endif()
 
 #=============================================================================
@@ -112,7 +112,7 @@ elseif (VS2013_OR_HIGHER)
 else()
     list(APPEND OS_SPECIFIC_INCS
         "include/braincloud/internal/DefaultBrainCloudComms.h")
-	list(APPEND OS_SPECIFIC_SRCS "src/DefaultBrainCloudComms.cpp")
+    list(APPEND OS_SPECIFIC_SRCS "src/DefaultBrainCloudComms.cpp")
 endif()
 
 if (USE_LIBWEBSOCKETS)
@@ -137,7 +137,7 @@ if (APPLE)
         "lib/apple/sskeychain/SSKeychain/SSKeychainQuery.m"
         "src/apple/AppleDevice.cpp"
         "src/DefaultTCPSocket.cpp")
-	include_directories("${BC_DIR}/lib/apple/sskeychain")
+    include_directories("${BC_DIR}/lib/apple/sskeychain")
 elseif (WIN32)
     list(APPEND OS_SPECIFIC_INCS
         "include/braincloud/internal/win/WindowsSaveDataHelper.h")
@@ -165,158 +165,158 @@ include_directories("${BC_DIR}/include")
 include_directories("${BC_DIR}/lib/jsoncpp-1.0.0")
 
 add_library(brainCloud STATIC
-	# public headers
-	include/braincloud/AuthenticationType.h
-	include/braincloud/BrainCloudAppStore.h
-	include/braincloud/BrainCloudAsyncMatch.h
-	include/braincloud/BrainCloudAuthentication.h
-	include/braincloud/BrainCloudClient.h
-	include/braincloud/BrainCloudDataStream.h
-	include/braincloud/BrainCloudEntity.h
-	include/braincloud/BrainCloudEvent.h
-	include/braincloud/BrainCloudFile.h
-	include/braincloud/BrainCloudFriend.h
-	include/braincloud/BrainCloudGamification.h
-	include/braincloud/BrainCloudGlobalApp.h
-	include/braincloud/BrainCloudGlobalEntity.h
-	include/braincloud/BrainCloudGlobalStatistics.h
-	include/braincloud/BrainCloudGroup.h
-	include/braincloud/BrainCloudIdentity.h
-	include/braincloud/BrainCloudMail.h
-	include/braincloud/BrainCloudMatchmaking.h
-	include/braincloud/BrainCloudOneWayMatch.h
-	include/braincloud/BrainCloudPlaybackStream.h
-	include/braincloud/BrainCloudPlayerState.h
-	include/braincloud/BrainCloudPlayerStatistics.h
-	include/braincloud/BrainCloudPlayerStatisticsEvent.h
-	include/braincloud/BrainCloudProduct.h
-	include/braincloud/BrainCloudProfanity.h
-	include/braincloud/BrainCloudPushNotification.h
-	include/braincloud/BrainCloudRedemptionCode.h
-	include/braincloud/BrainCloudRTTRegistration.h
-	include/braincloud/BrainCloudS3Handling.h
-	include/braincloud/BrainCloudScript.h
-	include/braincloud/BrainCloudSocialLeaderboard.h
-	include/braincloud/BrainCloudSteam.h
-	include/braincloud/BrainCloudTime.h
-	include/braincloud/BrainCloudTournament.h
-	include/braincloud/BrainCloudTypes.h
-	include/braincloud/BrainCloudVirtualCurrency.h
-	include/braincloud/BrainCloudWrapper.h
-	include/braincloud/FriendPlatform.h
-	include/braincloud/IEventCallback.h
-	include/braincloud/IFileUploadCallback.h
-	include/braincloud/IGlobalErrorCallback.h
-	include/braincloud/INetworkErrorCallback.h
-	include/braincloud/IRewardCallback.h
-	include/braincloud/IServerCallback.h
-	include/braincloud/OperationParam.h
-	include/braincloud/Platform.h
-	include/braincloud/ServerCall.h
-	include/braincloud/ServiceName.h
-	include/braincloud/ServiceOperation.h
-	include/braincloud/http_codes.h
-	include/braincloud/reason_codes.h
+    # public headers
+    include/braincloud/AuthenticationType.h
+    include/braincloud/BrainCloudAppStore.h
+    include/braincloud/BrainCloudAsyncMatch.h
+    include/braincloud/BrainCloudAuthentication.h
+    include/braincloud/BrainCloudClient.h
+    include/braincloud/BrainCloudDataStream.h
+    include/braincloud/BrainCloudEntity.h
+    include/braincloud/BrainCloudEvent.h
+    include/braincloud/BrainCloudFile.h
+    include/braincloud/BrainCloudFriend.h
+    include/braincloud/BrainCloudGamification.h
+    include/braincloud/BrainCloudGlobalApp.h
+    include/braincloud/BrainCloudGlobalEntity.h
+    include/braincloud/BrainCloudGlobalStatistics.h
+    include/braincloud/BrainCloudGroup.h
+    include/braincloud/BrainCloudIdentity.h
+    include/braincloud/BrainCloudMail.h
+    include/braincloud/BrainCloudMatchmaking.h
+    include/braincloud/BrainCloudOneWayMatch.h
+    include/braincloud/BrainCloudPlaybackStream.h
+    include/braincloud/BrainCloudPlayerState.h
+    include/braincloud/BrainCloudPlayerStatistics.h
+    include/braincloud/BrainCloudPlayerStatisticsEvent.h
+    include/braincloud/BrainCloudProduct.h
+    include/braincloud/BrainCloudProfanity.h
+    include/braincloud/BrainCloudPushNotification.h
+    include/braincloud/BrainCloudRedemptionCode.h
+    include/braincloud/BrainCloudRTTRegistration.h
+    include/braincloud/BrainCloudS3Handling.h
+    include/braincloud/BrainCloudScript.h
+    include/braincloud/BrainCloudSocialLeaderboard.h
+    include/braincloud/BrainCloudSteam.h
+    include/braincloud/BrainCloudTime.h
+    include/braincloud/BrainCloudTournament.h
+    include/braincloud/BrainCloudTypes.h
+    include/braincloud/BrainCloudVirtualCurrency.h
+    include/braincloud/BrainCloudWrapper.h
+    include/braincloud/FriendPlatform.h
+    include/braincloud/IEventCallback.h
+    include/braincloud/IFileUploadCallback.h
+    include/braincloud/IGlobalErrorCallback.h
+    include/braincloud/INetworkErrorCallback.h
+    include/braincloud/IRewardCallback.h
+    include/braincloud/IServerCallback.h
+    include/braincloud/OperationParam.h
+    include/braincloud/Platform.h
+    include/braincloud/ServerCall.h
+    include/braincloud/ServiceName.h
+    include/braincloud/ServiceOperation.h
+    include/braincloud/http_codes.h
+    include/braincloud/reason_codes.h
 
-	# private headers
-	include/braincloud/internal/Device.h
-	include/braincloud/internal/Mutex.h
-	include/braincloud/internal/GUID.h
-	include/braincloud/internal/IBrainCloudComms.h
-	include/braincloud/internal/IFileUploader.h
-	include/braincloud/internal/ITCPSocket.h
-	include/braincloud/internal/JsonUtil.h
-	include/braincloud/internal/RTTComms.h
-	include/braincloud/internal/SaveDataHelper.h
-	include/braincloud/internal/StringUtil.h
-	include/braincloud/internal/TimeUtil.h
-	include/braincloud/internal/TimerCallback.h
-	include/braincloud/internal/URLLoader.h
-	include/braincloud/internal/URLLoaderClient.h
-	include/braincloud/internal/URLRequest.h
-	include/braincloud/internal/URLRequestHeader.h
-	include/braincloud/internal/URLRequestMethod.h
-	include/braincloud/internal/URLResponse.h
-	include/braincloud/internal/md5x.h
-	include/braincloud/internal/timegm.h
+    # private headers
+    include/braincloud/internal/Device.h
+    include/braincloud/internal/Mutex.h
+    include/braincloud/internal/GUID.h
+    include/braincloud/internal/IBrainCloudComms.h
+    include/braincloud/internal/IFileUploader.h
+    include/braincloud/internal/ITCPSocket.h
+    include/braincloud/internal/JsonUtil.h
+    include/braincloud/internal/RTTComms.h
+    include/braincloud/internal/SaveDataHelper.h
+    include/braincloud/internal/StringUtil.h
+    include/braincloud/internal/TimeUtil.h
+    include/braincloud/internal/TimerCallback.h
+    include/braincloud/internal/URLLoader.h
+    include/braincloud/internal/URLLoaderClient.h
+    include/braincloud/internal/URLRequest.h
+    include/braincloud/internal/URLRequestHeader.h
+    include/braincloud/internal/URLRequestMethod.h
+    include/braincloud/internal/URLResponse.h
+    include/braincloud/internal/md5x.h
+    include/braincloud/internal/timegm.h
 
-	# source files
-	src/AuthenticationType.cpp
-	src/BrainCloudAppStore.cpp
-	src/BrainCloudAsyncMatch.cpp
-	src/BrainCloudAuthentication.cpp
-	src/BrainCloudChat.cpp
-	src/BrainCloudClient.cpp
-	src/BrainCloudDataStream.cpp
-	src/BrainCloudEntity.cpp
-	src/BrainCloudEvent.cpp
-	src/BrainCloudFile.cpp
-	src/BrainCloudFriend.cpp
-	src/BrainCloudGamification.cpp
-	src/BrainCloudGlobalApp.cpp
-	src/BrainCloudGlobalEntity.cpp
-	src/BrainCloudGlobalStatistics.cpp
-	src/BrainCloudGroup.cpp
-	src/BrainCloudIdentity.cpp
-	src/BrainCloudLobby.cpp
-	src/BrainCloudMail.cpp
-	src/BrainCloudMatchmaking.cpp
-	src/BrainCloudMessaging.cpp
-	src/BrainCloudOneWayMatch.cpp
-	src/BrainCloudPlaybackStream.cpp
-	src/BrainCloudPlayerState.cpp
-	src/BrainCloudPlayerStatistics.cpp
-	src/BrainCloudPlayerStatisticsEvent.cpp
-	src/BrainCloudPresence.cpp
-	src/BrainCloudProduct.cpp
-	src/BrainCloudProfanity.cpp
-	src/BrainCloudPushNotification.cpp
-	src/BrainCloudRedemptionCode.cpp
-	src/BrainCloudRTTRegistration.cpp
-	src/BrainCloudS3Handling.cpp
-	src/BrainCloudScript.cpp
-	src/BrainCloudSocialLeaderboard.cpp
-	src/BrainCloudSteam.cpp
-	src/BrainCloudTime.cpp
-	src/BrainCloudTournament.cpp
-	src/BrainCloudVirtualCurrency.cpp
-	src/BrainCloudWrapper.cpp
-	src/FriendPlatform.cpp
-	src/GUID.cpp
-	src/IBrainCloudComms.cpp
-	src/JsonUtil.cpp
-	src/OperationParam.cpp
-	src/Platform.cpp
-	src/RTTComms.cpp
-	src/SaveDataHelper.cpp
-	src/ServerCall.cpp
-	src/ServiceName.cpp
-	src/ServiceOperation.cpp
-	src/StringUtil.cpp
-	src/TimeUtil.cpp
-	src/TimerCallback.cpp
-	src/URLLoader.cpp
-	src/URLLoaderClient.cpp
-	src/URLRequest.cpp
-	src/URLRequestHeader.cpp
-	src/URLRequestMethod.cpp
-	src/URLResponse.cpp
-	src/md5x.c
+    # source files
+    src/AuthenticationType.cpp
+    src/BrainCloudAppStore.cpp
+    src/BrainCloudAsyncMatch.cpp
+    src/BrainCloudAuthentication.cpp
+    src/BrainCloudChat.cpp
+    src/BrainCloudClient.cpp
+    src/BrainCloudDataStream.cpp
+    src/BrainCloudEntity.cpp
+    src/BrainCloudEvent.cpp
+    src/BrainCloudFile.cpp
+    src/BrainCloudFriend.cpp
+    src/BrainCloudGamification.cpp
+    src/BrainCloudGlobalApp.cpp
+    src/BrainCloudGlobalEntity.cpp
+    src/BrainCloudGlobalStatistics.cpp
+    src/BrainCloudGroup.cpp
+    src/BrainCloudIdentity.cpp
+    src/BrainCloudLobby.cpp
+    src/BrainCloudMail.cpp
+    src/BrainCloudMatchmaking.cpp
+    src/BrainCloudMessaging.cpp
+    src/BrainCloudOneWayMatch.cpp
+    src/BrainCloudPlaybackStream.cpp
+    src/BrainCloudPlayerState.cpp
+    src/BrainCloudPlayerStatistics.cpp
+    src/BrainCloudPlayerStatisticsEvent.cpp
+    src/BrainCloudPresence.cpp
+    src/BrainCloudProduct.cpp
+    src/BrainCloudProfanity.cpp
+    src/BrainCloudPushNotification.cpp
+    src/BrainCloudRedemptionCode.cpp
+    src/BrainCloudRTTRegistration.cpp
+    src/BrainCloudS3Handling.cpp
+    src/BrainCloudScript.cpp
+    src/BrainCloudSocialLeaderboard.cpp
+    src/BrainCloudSteam.cpp
+    src/BrainCloudTime.cpp
+    src/BrainCloudTournament.cpp
+    src/BrainCloudVirtualCurrency.cpp
+    src/BrainCloudWrapper.cpp
+    src/FriendPlatform.cpp
+    src/GUID.cpp
+    src/IBrainCloudComms.cpp
+    src/JsonUtil.cpp
+    src/OperationParam.cpp
+    src/Platform.cpp
+    src/RTTComms.cpp
+    src/SaveDataHelper.cpp
+    src/ServerCall.cpp
+    src/ServiceName.cpp
+    src/ServiceOperation.cpp
+    src/StringUtil.cpp
+    src/TimeUtil.cpp
+    src/TimerCallback.cpp
+    src/URLLoader.cpp
+    src/URLLoaderClient.cpp
+    src/URLRequest.cpp
+    src/URLRequestHeader.cpp
+    src/URLRequestMethod.cpp
+    src/URLResponse.cpp
+    src/md5x.c
 
-	${OS_SPECIFIC_INCS}
-	${OS_SPECIFIC_SRCS}
-	${JSONCPP_FILES}
+    ${OS_SPECIFIC_INCS}
+    ${OS_SPECIFIC_SRCS}
+    ${JSONCPP_FILES}
 )
 
 #=============================================================================
 # Libraries
 #=============================================================================
 if (APPLE)
-	find_library(BC_GAMEKIT_LIB GameKit)
-	find_library(BC_COREFOUNDATION_LIB CoreFoundation)
-	find_library(BC_FOUNDATION_LIB Foundation)
-	find_library(BC_SYSCONFIG_LIB SystemConfiguration)
-	find_library(BC_SECURITY_LIB Security)
+    find_library(BC_GAMEKIT_LIB GameKit)
+    find_library(BC_COREFOUNDATION_LIB CoreFoundation)
+    find_library(BC_FOUNDATION_LIB Foundation)
+    find_library(BC_SYSCONFIG_LIB SystemConfiguration)
+    find_library(BC_SECURITY_LIB Security)
     list(APPEND libs 
         ${BC_GAMEKIT_LIB}
         ${BC_COREFOUNDATION_LIB}
@@ -324,34 +324,34 @@ if (APPLE)
         ${BC_SYSCONFIG_LIB}
         ${BC_SECURITY_LIB})
 elseif (LINUX)
-	find_package(CURL REQUIRED)
-	list(APPEND includes PUBLIC ${CURL_INCLUDE_DIRS})
+    find_package(CURL REQUIRED)
+    list(APPEND includes PUBLIC ${CURL_INCLUDE_DIRS})
 
     find_package(UUID REQUIRED)
-	list(APPEND includes PUBLIC ${UUID_INCLUDE_DIRS})
+    list(APPEND includes PUBLIC ${UUID_INCLUDE_DIRS})
 
     list(APPEND libs
         ${CURL_LIBRARIES}
         ${UUID_LIBRARIES})
 elseif (WIN32)
-	if (${USE_CPPREST})
-		# TODO: the cpprestsdk-static is *not* built by the CMake project.
+    if (${USE_CPPREST})
+        # TODO: the cpprestsdk-static is *not* built by the CMake project.
         # You will need to manually load up the project and build the 
         # various libs
-		include_directories(
+        include_directories(
             "${BC_DIR}/lib/win32/cpprestsdk-static/Release/include")
-		add_definitions(-D_NO_ASYNCRTIMP -DUSE_NEW_COMMS)
+        add_definitions(-D_NO_ASYNCRTIMP -DUSE_NEW_COMMS)
         find_library(BC_CPPREST_RELEASE_LIB cpprest120_2_0.lib
             "${BC_DIR}/lib/win32/cpprestsdk-static/Binaries/Win32/Release")
         find_library(BC_CPPREST_DEBUG_LIB cpprest120d_2_0.lib
             "${BC_DIR}/lib/win32/cpprestsdk-static/Binaries/Win32/Debug")
 
-		# additional libs required by cpprestsdk
+        # additional libs required by cpprestsdk
         set(WIN_PLATFORM_DIR
             "C:/Program Files (x86)/Windows Kits/8.1/Lib/winv6.3/um/x86")
-		find_library(BC_WINHTTP_LIB winhttp.lib ${WIN_PLATFORM_DIR})
-		find_library(BC_BCRYPT_LIB bcrypt.lib ${WIN_PLATFORM_DIR})
-		find_library(BC_CRYPT32_LIB crypt32.lib ${WIN_PLATFORM_DIR})
+        find_library(BC_WINHTTP_LIB winhttp.lib ${WIN_PLATFORM_DIR})
+        find_library(BC_BCRYPT_LIB bcrypt.lib ${WIN_PLATFORM_DIR})
+        find_library(BC_CRYPT32_LIB crypt32.lib ${WIN_PLATFORM_DIR})
 
         list(APPEND libs general
             ${BC_WINHTTP_LIB}
@@ -359,23 +359,23 @@ elseif (WIN32)
             ${BC_CRYPT32_LIB}
             debug ${BC_CPPREST_DEBUG_LIB}
             optimized ${BC_CPPREST_RELEASE_LIB})
-	else()
-		if (VS2013_OR_HIGHER)
+    else()
+        if (VS2013_OR_HIGHER)
             find_package(Socket)
             list(APPEND libs
                 msxml6
                 comsuppwd
                 ${Socket_LIBRARIES})
-		else()
-			include_directories(
+        else()
+            include_directories(
                 "${BC_DIR}/lib/win32/pthread-w32-2-8-0/Pre-built.2/include")
 
-			add_definitions(-DWIN32 -D_LIB -DPTW32_STATIC_LIB)
+            add_definitions(-DWIN32 -D_LIB -DPTW32_STATIC_LIB)
             find_library(BC_PTHREADW32_LIB pthreadVCE2
                 "${BC_DIR}/lib/win32/pthread-w32-2-8-0/Pre-built.2/lib")
 
-			add_definitions(-DCURL_STATICLIB)
-			include_directories("${BC_DIR}/lib/win32/curl-7.44.0/include")
+            add_definitions(-DCURL_STATICLIB)
+            include_directories("${BC_DIR}/lib/win32/curl-7.44.0/include")
             find_library(BC_CURL_LIB_RELEASE libcurl_a.lib
                 "${BC_DIR}/lib/win32/curl-7.44.0/lib")
             find_library(BC_CURL_LIB_DEBUG libcurl_a_debug.lib
@@ -385,35 +385,43 @@ elseif (WIN32)
                 ${BC_PTHREADW32_LIB}
                 optimized ${BC_CURL_LIB_RELEASE}
                 debug ${BC_CURL_LIB_DEBUG})
-		endif()
-	endif()
+        endif()
+    endif()
 endif()
 
-# LibWebSockets
 if (USE_LIBWEBSOCKETS)
-    option(LWS_WITHOUT_SERVER
-        "Don't build the server part of the library" ON)
-    option(LWS_WITHOUT_TESTAPPS
-        "Don't build the libwebsocket-test-apps" ON)
-    option(LWS_WITHOUT_TEST_SERVER
-        "Don't build the test server" ON)
-    option(LWS_WITHOUT_TEST_SERVER_EXTPOLL 
-        "Don't build the test server version that uses external poll" ON)
-    option(LWS_WITHOUT_TEST_PING 
-        "Don't build the ping test application" ON)
-    option(LWS_WITHOUT_TEST_CLIENT
-        "Don't build the client test application" ON)
-    option(LWS_WITH_SHARED
-        "Build the shared version of the library" OFF)
+    # mbedtls
+    option(ENABLE_TESTING "" OFF)
+    option(ENABLE_PROGRAMS "" OFF)
+    add_subdirectory(./lib/mbedtls/)
+    list(APPEND libs PUBLIC mbedtls mbedx509 mbedcrypto)
+    list(APPEND includes 
+        PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/lib/mbedtls/include/)
+    
+    # LibWebSockets
+    option(LWS_WITH_MBEDTLS "" ON)
+    set(LWS_MBEDTLS_INCLUDE_DIRS
+        "${CMAKE_CURRENT_BINARY_DIR}/lib/mbedtls/include/")
+    if (UNIX)
+        set(LWS_MBEDTLS_LIBRARIES
+            "${CMAKE_CURRENT_BINARY_DIR}/lib/mbedtls/library/libmbedtls.a"
+            "${CMAKE_CURRENT_BINARY_DIR}/lib/mbedtls/library/libmbedcrypto.a"
+            "${CMAKE_CURRENT_BINARY_DIR}/lib/mbedtls/library/libmbedx509.a")
+    else()
+        set(LWS_MBEDTLS_LIBRARIES 
+            "${CMAKE_CURRENT_BINARY_DIR}/lib/mbedtls/library/")
+    endif()
+    option(LWS_WITHOUT_SERVER "" ON)
+    option(LWS_WITHOUT_TESTAPPS "" ON)
+    option(LWS_WITHOUT_TEST_SERVER "" ON)
+    option(LWS_WITHOUT_TEST_SERVER_EXTPOLL "" ON)
+    option(LWS_WITHOUT_TEST_PING "" ON)
+    option(LWS_WITHOUT_TEST_CLIENT "" ON)
+    option(LWS_WITH_SHARED "" OFF)
     add_subdirectory(./lib/libwebsockets/)
     list(APPEND libs websockets)
     list(APPEND includes 
         PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/lib/libwebsockets/include/)
-    
-    # OpenSSL
-    find_package(OpenSSL REQUIRED ssl crypto)
-    list(APPEND includes ${OPENSSL_INCLUDE_DIR})
-    list(APPEND libs ${OPENSSL_LIBRARIES})
 endif()
 
 # Setup includes and linked libraries
