suppress some warnings on deprecated items
 update error message to new ptr string

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,3 +108,9 @@ bMultiTargetFormat_ASTC=True
 [Core.Log]
 ;LogHttp=Verbose
 
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+bSupportsPortraitOrientation=False
+bSupportsUpsideDownOrientation=False
+bSupportsLandscapeLeftOrientation=True
+PreferredLandscapeOrientation=LandscapeLeft
+
